--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -10,9 +10,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main/MySampleMavenProject" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main/MySampleMavenProject" ]
 
 jobs:
   build:
