--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -20,6 +20,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
+    - name: Check out Repository
     - uses: actions/checkout@v3
     - name: Set up JDK 19
       uses: actions/setup-java@v3
@@ -28,8 +29,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: cd MySampleMavenProject
-       mvn -B package --file pom.xml
+      shell: powershell
+      run: cd MySampleMavenProject | mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
