--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -20,7 +20,6 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - name: Check out Repository
     - uses: actions/checkout@v3
     - name: Set up JDK 19
       uses: actions/setup-java@v3
@@ -31,8 +30,7 @@ jobs:
     - name: Build with Maven
       id: build-maven
       shell: powershell
-      run: cd MySampleMavenProject
-        mvn -B package --file pom.xml
+      run: mvn -B package --file ../MySampleMavenProject/pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
