--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -28,8 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-    - run: cd MySampleMavenProject
-    - run: mvn -B package --file pom.xml
+      run: cd MySampleMavenProject
+       mvn -B package --file "..MySampleMavenProject/MySampleMavenProject/pom.xml"
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
