--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -21,15 +21,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        repository: MySampleMavenProject/MySampleMavenProject
+        path: my-maven-Project 
+        
     - name: Set up JDK 19
       uses: actions/setup-java@v3
       with:
         java-version: '19'
         distribution: 'temurin'
         cache: maven
+        
     - name: Build with Maven
       run: |
-       cd ./MySampleMavenProject
        mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
