--- a/.github/workflows/mavenWorkflowLab.yml
+++ b/.github/workflows/mavenWorkflowLab.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: GitHub Action Maven Project CI
 
 on:
   push:
@@ -20,22 +20,21 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
-      with:
-        repository: MySampleMavenProject/MySampleMavenProject
-        path: my-maven-Project 
+    - name: Step 1 - Checkout main branch fom GitHub
+      uses: actions/checkout@v3
         
-    - name: Set up JDK 19
+    - name: Step 2 - Set up JDK 19
       uses: actions/setup-java@v3
       with:
         java-version: '19'
         distribution: 'temurin'
         cache: maven
         
-    - name: Build with Maven
+    - name: Step 3 - Build with Maven
       run: |
+       cd ../MySampleMavenProject
        mvn -B package --file pom.xml
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
+    - name: Step 4 - Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
